fix opensearch startup